Add my card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Aachal Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Aachal Patwari</p>
+          <p class="contact">
+            <i class="fa-brands fa-instagram"></i>
+            <a href="https://www.instagram.com/aachal25_?igsh=YzljYTk1ODg3Zg== " target="_blank">aachal25_</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/AachalPat" target="_blank">AachalPat</a>
+          </p>
+          <p class="about">Hello,It's my first contribution.Can't wait to make more meaningful contributions.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=tVzUXW6siu0&list=PLu0W_9lII9agq5TrH9XLIKQvv0iaF2X3w" target="_blank" title="First Resource">Sigma Web Development by CodeWithHarry</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=4WjtQjPQGIs" target="_blank" title="Second Resource">Web Development Roadmap</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=erEgovG9WBs" target="_blank" title="Third resource">100+ Web Development Things you Should Know</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Aachal Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
