--- a/index.html
+++ b/index.html
@@ -151,6 +151,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Samuel Moore</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/samuel-moore-34a416128/" target="_blank">Samuel Moore</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/mooresamuel" target="_blank">mooresamuel</a>
+          </p>
+          <p class="about">I'm a passionate and curious programmer currently studying at 42 London. I've been learning to code for about a year now, diving into a variety of programming languages and frameworks.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">Free code camp</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Second Resource">Geeks for Geeks</a>
+              </li>
+              <li>
+                <a href="https://openai.com/index/chatgpt/" target="_blank" title="Third resource">Chat GPT</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ kelseadecker START ________  -->
         <div class="card">
           <p class="name">Kelsea Decker</p>
