--- a/index.html
+++ b/index.html
@@ -3095,7 +3095,7 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/EsseFNC" target="_blank">EsseFNC</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">High School computer science student. Would love to contribute more to open-source projects.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
