--- a/index.html
+++ b/index.html
@@ -2989,6 +2989,36 @@
         </div>
         <!-- ========= Gil Card END =========   -->
 
+
+        <!-- ========= Srikar Card Start =========   -->
+
+        <div class="card">
+          <p class="name">Srikar</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.x.com/w_srikar" target="_blank">Srikar</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/dis-craft" target="_blank">Github</a>
+          </p>
+          <p class="about">I'm srikar, I'm a student learning coding and this is my first github contribution</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3 schools</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Second Resource">Stackoverflow</a>
+              </li>
+              <li>
+                <a href="https://github.com" target="_blank" title="Third resource">Github</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ========= Srikar Card END =========   -->
+
+
         <!-- _______________ Tanguy LH  START ________________  -->
         <div class="card">
           <p class="name">Tanguy LH</p>
