Added my Card Information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: emmanuelziem Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Emmanuel Ziem Yaan-Tol</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/__justcode" target="_blank">__justcode</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/emmamayne23" target="_blank">emmamayne23</a>
+          </p>
+          <p class="about">Hi, I'm Emmanuel, a Ghanaian, and an aspiring full stack developer (mern-stack) specifically, but also would want to learn python and other languages as well. I'm also a big music lover.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">w3schools</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@TraversyMedia" target="_blank" title="Second Resource">Brad Traversy</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@javascriptmastery" target="_blank" title="Third resource">javascript mastery</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ emmanuelziem Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
