--- a/index.html
+++ b/index.html
@@ -117,6 +117,33 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Hot Pepper</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="#" target="_blank">I don't have twitter</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/tony-Hanna" target="_blank">GitHub</a>
+          </p>
+          <p class="about"> Hello, I'm a software developer who wants to collaborate with others for the first time!!! </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">We3schools</a>
+              </li>
+              <li>
+                <a href="https://www.google.com" target="_blank" title="Second Resource">google</a>
+              </li>
+              <li>
+                <a href="https://www.khanacademy.org" target="_blank" title="Third resource">Khan Academy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">MartianCactus</p>
           <p class="contact">
             <i class="fa-brands fa-google"></i>
