Added the Nikhil-NP card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Nikhil START ________  -->
+        <div class="card">
+          <p class="name">Nikhil P</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Nikhil_KP_" target="_blank">Nikhil P</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Nikhil-NP" target="_blank">Nikhil-NP</a>
+          </p>
+          <p class="about">Just a  guy who is exploring this vast feild of Compute Science, also open to collaborate and learn</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://cs50.harvard.edu/x/2024/" target="_blank" title="First Resource">CS50x</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Second Resource">stackoverflow</a>
+              </li>
+              <li>
+                <a href="https://javascript.info/" target="_blank" title="Third resource">javaScript.info</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Nikhil END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
