Tarjeta de JEANSKI
Agregué mi tarjeta de información

--- a/index.html
+++ b/index.html
@@ -3088,6 +3088,46 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+                <!-- ________ JEANSKI card START ________  -->
+                <div class="card">
+                  <p class="name">JEANSKI</p>
+                  <p class="contact">
+                    <i class="fab fa-instagram"></i>
+                    <a href="https://www.instagram.com/jeanskill_/" target="_blank">@jeanskill_</a>
+                  </p>
+                  <p class="about">Un aficionado quieriendo aprendrer</p>
+                  <div class="resources">
+                    <p>3 Recursos útiles para desarroladores</p>
+                    <ul>
+                      <li>
+                        <a 
+                          href="https://goalkicker.com/" 
+                          target="_blank" 
+                          title="Libros de Notas de Programación para Profesionales">
+                          Libros de Notas de Programación para Profesionales
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://github.com/EbookFoundation/free-programming-books"
+                          target="_blank"
+                          title="Libros de Programación Gratis">
+                          Libros de Programación Gratis
+                        </a>
+                      </li>
+                      <li>
+                        <a
+                          href="https://www.youtube.com/playlist?list=PL2Z95CSZ1N4HXvLWg8oL4IpyJx27HafcD" 
+                          target="_blank" 
+                          title="Curso de JavaScript en YouTube">
+                          Curso de JavaScript en YouTube
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+                <!-- ________ JEANSKI card END ________  -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
