Add ashchen3 card info

--- a/index.html
+++ b/index.html
@@ -117,6 +117,35 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">ashchen3</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/alex-chen03/" target="_blank">Alex Chen</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/ashchen3" target="_blank">ashchen3</a>
+          </p>
+          <p class="about">
+            Hi! I like applying ML to health and biological problems. Always looking to learn something new! Planning on making a travel planning webapp soon..
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://docs.mapbox.com/mapbox-gl-js/api/" target="_blank" title="Mapbox API">Mapbox API</a>
+              </li>
+              <li>
+                <a href="https://biopython.org/docs/latest/" target="_blank" title="BioPython Docs">BioPython Docs</a>
+              </li>
+              <li>
+                <a href="https://www.bioinformaticsalgorithms.org/" target="_blank" title="Bioinformatics Algorithms">Bioinformatics Algorithms</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">MartianCactus</p>
           <p class="contact">
             <i class="fa-brands fa-google"></i>
