--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *nehasaleemdesai* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Neha Saleem Desai</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/nehasaleemdesai/" target="_blank">nehasaleemdesai</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">nehasaleemdesai</a>
+          </p>
+          <p class="about">Excited to grow in my coding journey, contribute meaningfully, and build genuine connections within the coder community.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://css-tricks.com/" target="_blank" title="Best for CSS">CSS-Tricks</a>
+              </li>
+              <li>
+                <a href="https://www.frontendmentor.io/" target="_blank" title="To Practice Projects">Frontend Mentor</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/" target="_blank" title="Learning Made Simpler">Codecademy</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *nehasaleemdesai* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
