--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+               <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+               <div class="card">
+                <p class="name">Suraj Shankhpal</p>
+                <p class="contact">
+                  <i class="fab fa-x-twitter"></i>
+                  <a href="https://www.twitter.com/falconmonks" target="_blank">Falcon Monks</a>
+                  <i class="fab fa-github"></i>
+                  <a href="https://www.github.com/sturdyknight" target="_blank">Suraj Shankhpal</a>
+                </p>
+                <p class="about">about you</p>
+                <div class="resources">
+                  <p>3 Useful Dev Resources</p>
+                  <ul>
+                    <li>
+                      <a href="https://css-tricks.com/" target="_blank" title="First Resource">CSS tricks</a>
+                    </li>
+                    <li>
+                      <a href="https://www.fast.ai/" target="_blank" title="Second Resource">Fast AI: Deep Learning</a>
+                    </li>
+                    <li>
+                      <a href="https://codesandbox.io/" target="_blank" title="Third resource">Code Sand Box</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">MartianCactus</p>
