--- a/index.html
+++ b/index.html
@@ -1362,6 +1362,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Antonio Diaz</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/TonyD_Montana" target="_blank">@TonyD_Montana</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/antoniodiazmontana" target="_blank">antoniodiazmontana</a>
+          </p>
+          <p class="about">Hello, my name is Antonio and I am a spanish new Junior Software Developer. I am starting with some small projetcs to show and improve my skills so you are welcome to my GitHub to help me in my journey.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="First Resource">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3School</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Third resource">Youtube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ MainakSil's card START ________  -->
         <div class="card">
           <p class="name">Mainak Sil</p>
