--- a/index.html
+++ b/index.html
@@ -117,6 +117,36 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Cara</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/cara-mcginley/" target="_blank">Cara McGinley</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/caraMcG" target="_blank">CaraMcG</a>
+            <i class="fa-solid fa-star"></i>
+            <a href="https://caramcginley.com/" target="_blank">Portfolio</a>
+
+          </p>
+          <p class="about">Hello!👋 I'm a Data analyst and full stack developer. I love learning new things and building/contributing to projects that help the community 😊</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://css-tricks.com/snippets/css/a-guide-to-flexbox/#aa-flexbox-properties" target="_blank" title="An easy to follow guide to learning flexbox">Flexbox Guide</a>
+              </li>
+              <li>
+                <a href="https://www.creative-tim.com/twcomponents/cheatsheet/" target="_blank" title="Quick reference sheet for Tailwindcss classes">Tailwind Cheat Sheet</a>
+              </li>
+              <li>
+                <a href="https://dribbble.com/" target="_blank" title="Website with designs for inspiration and research">Dribbble</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">MartianCactus</p>
           <p class="contact">
             <i class="fa-brands fa-google"></i>
