Added ZephByte card.

--- a/index.html
+++ b/index.html
@@ -117,6 +117,39 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">ZephByte</p>
+          <p class="contact">
+            <i class="fab fa-bluesky"></i>
+            <a href="https://bsky.app/profile/zephbyte.bsky.social" target="_blank">@zephbyte.bsky.social</a>
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/ZephByte" target="_blank">@ZephByte</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/ZephByte" target="_blank">ZephByte </a>
+            <i class="fab fa-reddit"></i>
+            <a href="https://www.reddit.com/user/ZephByte/" target="_blank">u/ZephByte</a>
+            <i class="fab fa-youtube"></i>
+            <a href="https://www.youtube.com/@ZephByte" target="_blank">@ZephByte</a>
+          </p>
+          <p class="about">Android Dev and Hobbyist. Interested in Embedded Sytems and contributing to open source projects. Minecraft plugins are always fun as well!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.android.com/develop" target="_blank" title="androidDocs">Android Dev Docs</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com/" target="_blank" title="leetcode">Leetcode (Interview Prep ;D)</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@ModdingByKaupenjoe" target="_blank" title="mcModdingTutorials">Minecraft Mod Tutorials</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">MartianCactus</p>
           <p class="contact">
             <i class="fa-brands fa-google"></i>
