--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ unimaria card START ________  -->
+        <div class="card">
+          <p class="name">Maria</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/MariaTseytlin" target="_blank">MariaTseytlin</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/unimaria" target="_blank">unimaria</a>
+          </p>
+          <p class="about">Hey, I'm Maria! I'm a full-stack developer currently working on my master's thesis in NLP. Excited to start my contribution journey here 🤓</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Udemy - has the best courses">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=8XJzdjhVrpw" target="_blank" title="A great video about when you shouldn't use boolean functions">The problem with boolean functions</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ unimaria card END ________  -->
+
         <!-- ________ Advait Desai Card START ________  -->
         <div class="card">
           <p class="name">Advait Desai</p>
