Adition of my Card in the index.html file

--- a/index.html
+++ b/index.html
@@ -3118,6 +3118,43 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- _________Lucas Gomes Santana card START________ -->
+        <div class="card">
+          <p class="name">Lucas Gomes Santana</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/lucas-gomes-santana" target="_blank">lucas-gomes-santana</a>
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/lucas-gomes-77892a343/?trk=opento_sprofile_details" target="_blank">Lucas Gomes</a>
+          </p>
+          <p class="about">I'm a high school student who study programming by my own.My objective is become a full-stack developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://openai.com/chatgpt/overview/" target="_blank" title="OSSU - Computer Science">
+                  ChatGPT
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.youtube.com/@BroCodez"
+                  target="_blank"
+                  title="Free Programming Books"
+                >
+                  Bro Code Youtube Channel
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@cs50" target="_blank" title="CS50's Youtube Channel">
+                  CS50's Youtube Channel
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- _________Lucas Gomes Santana card END________ -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
