--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- __________ PARTH CARD Starts _______________ -->
+        <div class="card">
+          <p class="name">Parth Bhatt</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">thatsparthbhatt</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">paarthbhatt</a>
+          </p>
+          <p class="about">
+            I'm a first-year tech enthusiast who believes in transforming code into impactful solutions. While many are exploring options, I’ve already dived into Web3 and Blockchain, because the future is 3.0, not 2.0.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.codewithharry.com/" target="_blank" title="First Resource">Code with Harry</a>
+              </li>
+              <li>
+                <a href="https://github.com/bradtraversy" target="_blank" title="Second Resource">Traversy Media</a>
+              </li>
+              <li>
+                <a href="https://harkirat.classx.co.in/new-courses" target="_blank" title="Third resource">Harkirat Singh</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        
+        <!-- __________ PARTH CARD Ends _______________ -->
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
