--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Harsh's card START ________  -->
+        <div class="card">
+          <p class="name">Harsh</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/HBhardwaj_05" target="_blank">HarshBhardwaj05</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Harsh16Bhardwaj" target="_blank">Harsh16Bhardwaj</a>
+          </p>
+          <p class="about">I like building stuff specially which has potential to solve real life problems, works best if it makes me money as well.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://shadows.brumm.af/" target="_blank" title="First Resource">Shadows for your Website</a>
+              </li>
+              <li>
+                <a href="https://www.gradientmagic.com/" target="_blank" title="Second Resource">Cool Gradients</a>
+              </li>
+              <li>
+                <a href="https://www.pxfuel.com/en/desktop-wallpaper-fyitg" target="_blank" title="Third resource">Stock Photos</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Hars's card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
