Add my card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Janek Foote card START ________  -->
+        <div class="card">
+          <p class="name">Janek Foote</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/JanekFoote" target="_blank">JanekFoote</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/JanekFoote99" target="_blank">JanekFoote99</a>
+          </p>
+          <p class="about">Hey, my name is Janek. After graduating college and working on some personal projects, I 
+            want to get into open-source projects to improve my knowledge in the software development field. 
+            I'm interested in computer vision and game development.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://docs.unity3d.com/6000.0/Documentation/Manual/UnityManual.html" target="_blank" title="Unity Documentation">Unity Documentation</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Stack Overflow">Stack Overflow</a>
+              </li>
+              <li>
+                <a href="https://leetcode.com" target="_blank" title="Leetcode">Leetcode</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Janek Foote card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
