--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *Diego Rios card START ________  -->
+        <div class="card">
+          <p class="name">Diego Rios</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/diego-r-66a56317a/" target="_blank">Diego Rios</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/diegorios99" target="_blank">diegorios99</a>
+          </p>
+          <p class="about">Hello! My name is Diego and I am a recent CS grad from 
+            Central Washington University and I am now looking for a career in software development! 😎</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://leetcode.com/studyplan/top-interview-150/" target="_blank" title="Top Interview 150">Top Interview 150</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="GeeksForGeeks">GeeksForGeeks</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schoools">W3 Schoools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *Diego Rios card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
