--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+          <!-- ________ *TEMPLATE JOHN card START ________  -->
+
+        <div class="card">
+          <p class="name">John C Landry</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/yrdnalcnhoj" target="_blank">@yrdnalcnhoj</a><BR>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/yrdnal-c-nhoj" target="_blank">yrdnal-c-nhoj</a>
+          </p>
+          <p class="about">I'm a self taught programmer, figuring out web development.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://youtu.be/ix9cRaBkVe0?feature=shared" target="_blank" title="First Resource">😎 BroCode on YouTube</a>
+              </li>
+              <li>
+                <a href="https://www.gpt.ai/resources/grimoire" target="_blank" title="Second Resource">🧙‍♂️ Grimoire Code Wizard</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">🍎 WWW3 Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
