Add my card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Alvaro Zayas-Bazan Santos</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/alvaro-zayas-bazan-santos-842846286/" target="_blank">Alvaro Zayas-Bazan Santos</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Beledynyer" target="_blank">Beledynyer</a>
+          </p>
+          <p class="about">I like potatoes 😊</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/learn/" target="_blank" title="Learn web development (and more) for free">Free Code Camp</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com/learn" target="_blank" title="Build a career in tech">Codecademy</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=zJSY8tbf_ys" target="_blank" title="Frontend Web Development Bootcamp Course (JavaScript, HTML, CSS)">Frontend Web Development Bootcamp Course (JavaScript, HTML, CSS)</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
