--- a/index.html
+++ b/index.html
@@ -115,6 +115,37 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Mercy Mbao</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/junearsenic7" target="_blank">@junearsenic7</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/mercie-ux" target="_blank">@mercie-ux</a>
+          </p>
+          <p class="about">
+            Hi<span style="font-size: 24px;">👋</span> I'm Mercy a frontend developer, aspiring to 
+            transition to web3 development.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="www.w3schools.com/" target="_blank" title="First Resource">www.w3schools.com</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Second Resource">geeksforgeeks</a>
+              </li>
+              <li>
+                <a href="https://www.javatpoint.com/" target="_blank" title="Third resource">javatpoint</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
