--- a/index.html
+++ b/index.html
@@ -115,6 +115,27 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Rihad Roshan card START ________  -->
+        <div class="card">
+          <p class="name">Rihad Roshan</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/rihadroshan" target="_blank">Rihad Roshan</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/rihadroshan" target="_blank">Rihad Roshan</a>
+          </p>
+          <p class="about">Hello Friend,<br>I'm a Cybersecurity Researcher.</p>
+          <div class="resources">
+            <p>Dev Resource</p>
+            <ul>
+              <li>
+                <a href="https://github.com/rihadroshan/ssh-honeypot" target="_blank" title="SSH Honeypot">SSH Honeypot</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Rihad Roshan card END ________  -->
+        
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
