--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Bhuvi card START ________  -->
+        <div class="card">
+          <p class="name">Bhuvi</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">bhuvi_d12103</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">Bhuvi1617</a>
+          </p>
+          <p class="about">Hey there,I am Bhuvi. I am currently doing my Btech in Computer Science. Coding, writing and gaming are my favourite things to do. </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.tutorialspoint.com/" target="_blank" title="A good website to learn from">Tutorials Point</a>
+              </li>
+              <li>
+                <a href="https://www.mygreatlearning.com/" target="_blank" title="Has a lot of useful Courses">Great Learning</a>
+              </li>
+              <li>
+                <a href="https://medium.com/free-code-camp/building-a-simple-node-js-api-in-under-30-minutes-a07ea9e390d2" target="_blank" title="A good article on Medium">Medium article on API</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Bhuvi card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
