--- a/index.html
+++ b/index.html
@@ -115,6 +115,40 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ================================================ -->
+        <!-- ==================  TEMPLATE  ================== -->
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Arjayn Piratheeparatnam</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">---</a> <!-- Do Not own a Twitter Account -->
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ArjaynP" target="_blank">ArjaynP</a>
+          </p>
+          <p class="about">
+            Hi! My name is Arjayn and I'm currently a student at Western University (University of Western Ontario) studying Computer Science. Looking forward to creating my first contribution on this repo
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="W3 Schools">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://www.codecademy.com" target="_blank" title="Codecademy">Codecademy</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="freeCodeCamp">freeCodeCamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
