--- a/index.html
+++ b/index.html
@@ -115,6 +115,37 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+
+        <!-- ________ Mathdallas-code card START ________  -->
+        <div class="card">
+          <p class="name">Jaiwant</p>
+          <p class="contact">
+            <i class="fa-brands fa-youtube"></i>
+            <a href="https://www.youtube.com/@MathdallasRblx" target="_blank">Mathdallas</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Mathdallas-code" target="_blank">Mathdallas-code</a>
+          </p>
+          <p class="about">Hello! I am Jaiwant! I am a Python coder currently looking to collaborate on GitHub. Happy to
+            contribute! 😁
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org" target="_blank" title="GeeksforGeeks - Really nice for coding problems">GeeksforGeeks</a>
+              </li>
+              <li>
+                <a href="https://codepen.io" target="_blank" title="CodePen - Best website for writing and testing HTML code.">CodePen</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com" target="_blank" title="W3Schools - Learn ANY coding language!">W3Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
