--- a/index.html
+++ b/index.html
@@ -88,32 +88,32 @@
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
-        <div class="card">
-          <p class="name">Your name</p>
+         <!-- ________ *Qaim Raza* Contributor card START ________  -->
+         <div class="card">
+          <p class="name">Qaim Raza</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/qaimraza21" target="_blank">qaimraza21</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/qaimraza21" target="_blank">qaimraza21</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">A programmer begining his journey in web development</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://ww.w3schools.com" target="_blank" title="First Resource">w3 schools</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://stackoverflow.com" target="_blank" title="Second Resource">stackoverflow</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://geeksforgeeks.org" target="_blank" title="Third resource">GeeksforGeeks</a>
               </li>
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ *Qaim Raza* Contributor card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
