--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ PhuocThinh card START ________  -->
+        <div class="card">
+          <p class="name">Phuoc Thinh</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/ahsvuasaubo" target="_blank">ahsvuasaubo</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/PhuocThinhkkk" target="_blank">PhuocThinhkkk</a>
+          </p>
+          <p class="about">My goal is to become an excellent programmer in the future, and I am willing to sacrifice everything for it.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/learn" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="TheOdinProject">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@ThePrimeTimeagen" target="_blank" title="Subscribe to him for more fun programming content">ThePrimeTime</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ PhuocThinh card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
