--- a/index.html
+++ b/index.html
@@ -90,6 +90,34 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">YASHasvi SHUkla 🐊</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.instagram.com/yyyashasviiiii/" target="_blank">Yashasvi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/yyyashasviiiii" target="_blank">yyyashasviiiii</a>
+          </p>
+          <p class="about">A Web Developer with Python toppings! Currently in my college, learning things. 
+            <br>Living the life that I pretend </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.kaggle.com" target="_blank" title="First Resource">Kaggle</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Second Resource">YouTube</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third Resource">GeeksforGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Your name</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
