Add STICKnoLOGIC contribution card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,72 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ STICKnoLOGIC card START ________  -->
+        <div class="card" style="padding-bottom: 0;">
+          <p class="name">John Aerial J. Azcune<span style="font-size: 1rem; color: grey; margin: 0; justify-self: start; display: block;">@STICKnoLOGIC</span></p>
+          <p class="contact" style="padding-top: 0; padding-bottom: 2px;">
+            |
+            <a href="https://www.x.com/STICKnoLOGIC" target="_blank">
+              <i class="fab fa-x-twitter"></i>
+            </a>
+            |
+            <a href="https://bsky.app/profile/STICKnoLOGIC.bsky.social" target="_blank">
+              <i class="fab fa-bluesky"></i>
+            </a>
+            |
+            <a href="https://www.facebook.com/STICKnoLOGIC" target="_blank">
+              <i class="fab fa-facebook"></i>
+            </a>
+            |
+            <a href="https://discord.com/users/789710667417387058" target="_blank">
+              <i class="fab fa-discord"></i>
+            </a>
+            |
+            <a href="https://STICKnoLOGIC.itch.io/" target="_blank">
+              <i class="fab fa-itch-io"></i>
+            </a>
+            |
+            <a href="https://www.linkedin.com/in/STICKnoLOGIC/" target="_blank">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            |
+            <a href="https://www.youtube.com/@STICKnoLOGIC" target="_blank">
+              <i class="fab fa-youtube"></i>
+            </a>
+            |
+            <a href="https://www.github.com/STICKnoLOGIC" target="_blank">
+              <i class="fab fa-github"></i>
+            </a>
+            |
+            <a href="https://STICKnoLOGIC.is-a.dev" target="_blank">
+              <i class="fab fa-globe"></i>
+            </a>
+            |
+            <a href="https://raket.ph/STICKnoLOGIC" target="_blank">
+              <i class="fab fa-link"></i>
+            </a>
+            |
+          </p>
+          <p class="about">
+            Web and App Developer specializing in digital design and pixel art. Skilled in Java, Dart, GDScript, and PHP, I utilize Android Studio, Godot and Flutter for development. My artistic tools include Photoshop, Canva, CapCut, Aseprite, and Illustrator.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://dly.to/LfKL4MXY2Ly" target="_blank" title="Daily.dev Resource">Daily.Dev Community</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@Brackeys" target="_blank" title="Video Games Resource">Brackeys Youtube Channel</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Very Useful resource">StackOverflow! of course!!</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ STICKnoLOGIC card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
