Awesome card commit by Brian Musakwa

--- a/index.html
+++ b/index.html
@@ -114,7 +114,40 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
+        <!-- ________ digreatbrian card START ________  -->
+        <div class="card">
+          <p class="name">Brian Musakwa</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/digreatbrian" target="_blank">Brian Musakwa</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/digreatbrian" target="_blank">digreatbrian</a>
+          </p>
+          <p class="about">
+          Building innovative software solutions 🚀 | Always learning, always evolving.
+          </p>
+          <div class="resources">
+            <p>Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.ko-fi.com/" target="_blank" title="Ko-fi">Receive donations for your projects</a>
+              </li>
+              <li>
+                <a href="https://www.github.com/digreatbrian/buildozer-action.git" target="_blank" title="Buildozer">Convert your Kivy app to APK</a>
+              </li>
+              <li>
+                <a href="https://www.github.com/digreatbrian/duck.git" target="_blank" title="Duck framework">Share/contribute your ideas for better web development</a>
+              </li>
+              <li>
+                <a href="https://www.digreatbrian.tech" target="_blank" title="Portfolio">Review my portfolio and share your experience</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ digreatbrian card END ________  -->
 
+        
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
